Navbar/breadcrumbs: fix wrapping/resize on long paths
This was annoying for a really long time, and finally got to fix it. Not
very clean though, on image viewer it'd be best to show just the folder
name for my collection model, but an improvement.

Additionally, enable the breadcrumbs at a size lower (Bootstrap small vs
medium). Before, small would have basically guaranteed ugly wrapping,
hence it was disabled.

--- a/static/corydalis/css/basic.css
+++ b/static/corydalis/css/basic.css
@@ -140,6 +140,21 @@ div#imageNavGroup .btn {
     font-size: inherit;
 }
 
+/* Navigation breadcrumbs handling */
+li.nav-nowrap-item {
+    min-width: 0%;
+}
+
+a.parent-nav {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+ul#nav-breadcrumbs {
+    max-width: 45%;
+}
+
 @media(min-width: 48em) {
     div#imageNavGroup {
         left: auto;
@@ -147,17 +162,29 @@ div#imageNavGroup .btn {
         right: 1rem;
         font-size: x-small;
     }
+
+    ul#nav-breadcrumbs {
+        max-width: 55%;
+    }
 }
 
 @media(min-width:62em) {
     div#imageNavGroup {
         font-size: small;
     }
+
+    ul#nav-breadcrumbs {
+        max-width: 65%;
+    }
 }
 
 @media(min-width:75em) {
     div#imageNavGroup {
         font-size: medium;
+    }
+
+    ul#nav-breadcrumbs {
+        max-width: 70%;
     }
 }
 
